--- a/less/mixins.less
+++ b/less/mixins.less
@@ -34,7 +34,7 @@
     display: @dislay;
     justify-content: @justify;
     align-self: @align-self;
-    width: 50%;
+    
 
 }
 
