--- a/less/navigation.less
+++ b/less/navigation.less
@@ -56,7 +56,9 @@ nav {
 
     #social {
         .socialmedianav();
-        border: 1px solid;
+        border-bottom: 1px solid;
+        padding-bottom: 2%;
+        width: 50%;
         
         i.fab.fa-twitter:hover {
             color: @twitter-color;
